feat: add kv/sync api endpoint
